<resources>
    <string name="app_name">Contracted Farming</string>
    <string name="login">Login</string>
    <string name="enter_your_number_here">Enter Your Number Here</string>
    <string name="click_on_send_otp_to_login_register">Click on send OTP to login / register</string>
    <string name="app_will_send_otp_to_the_entered_number">App Will Send OTP To the Entered Number</string>
    <string name="login_register">Login / Register</string>
    <string name="continue_without_login">Continue Without Login</string>
    <string name="enter_the_otp_which_you_received">Enter The OTP Which You Received</string>
    <string name="enter_the_otp_here">Enter the OTP here....</string>
    <string name="didn_t_receive_change_your_number">Didn\'t Receive ? Change Your Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="welcome">Welcome</string>
    <string name="select_what_is_your_line_of_work">Select What is your line of work?</string>
    <string name="set_your_profile">Set Your Profile</string>
    <string name="farmer">Farmer</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="pincode">Pin code</string>
    <string name="save_and_next">Save and Next</string>
    <string name="circle">Circle</string>
    <string name="village">Village</string>
    <string name="taluka">Taluka</string>
    <string name="district">District</string>
    <string name="pan_card_no">PAN Card No.</string>
    <string name="aadhaar_no">Aadhaar No</string>
    <string name="mobil_no">Mobil No</string>
    <string name="my_text">My Text</string>
    <string name="hello">Hello</string>
    <string name="next">Next</string>
    <string name="reject">Reject</string>
    <string name="manager">Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_plot">AddPlotActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="farmer_name">Farmer Name ...</string>
    <string name="farmer_profile_picture">Farmer Profile Picture</string>
</resources>