<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_message_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/logo"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_otp_which_you_received"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="#6e6e6e"
        android:layout_below="@id/logo"
        android:id="@+id/textheading"/>


    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textheading"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:hint="@string/enter_the_otp_here"
        android:textColor="@color/black"
        android:id="@+id/getotp"
        android:textAlignment="center"
        android:maxLength="6"
        android:inputType="number"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didn_t_receive_change_your_number"
        android:id="@+id/changenumber"
        android:layout_below="@id/getotp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changenumber"
        android:id="@+id/verifyotp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:paddingLeft="40dp"
        android:text="@string/verify_otp"
        android:layout_marginTop="50dp"
        android:paddingRight="40dp"/>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/verifyotp"
        android:id="@+id/progressbarofotpauth"
        android:visibility="invisible"
        android:layout_marginTop="30dp"/>




</RelativeLayout>